<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.casillas.MiPreferences"
    tools:showIn="@layout/app_bar_mi_preferences">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout1"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:text="@string/cprefe_tv_axisX_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cprefe_tv_axisX" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cprefe_sb_axisX"
            android:layout_below="@+id/cprefe_tv_axisX"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:indeterminate="false"
            android:progress="0"
            android:max="2" />

        <TextView
            android:text="@string/cprefe_tv_axisY_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cprefe_tv_axisY"
            android:layout_below="@+id/cprefe_sb_axisX"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cprefe_sb_axisY"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cprefe_tv_axisY"
            android:layout_alignParentLeft="true"
            android:max="5"
            android:indeterminate="false" />

        <TextView
            android:text="@string/cprefe_tv_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cprefe_tv_value"
            android:layout_below="@+id/cprefe_sb_axisY"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <SeekBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cprefe_sb_value"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cprefe_tv_value"
            android:layout_alignParentLeft="true"
            android:max="4"
            android:indeterminate="false" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout2"
        android:layout_below="@+id/relativeLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cprefe_cb_vibration"
            android:id="@+id/cprefe_cb_vibration"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cprefe_cb_sound"
            android:id="@+id/cprefe_cb_sound"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/cprefe_cb_vibration"
            android:layout_toEndOf="@+id/cprefe_cb_vibration"
            android:checked="false" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout3"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cprefe_tv_type_game_tittle_text"
                android:id="@+id/cprefe_tv_type_game_tittle"
                android:textSize="20dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cprefe_rb_numbers"
                android:id="@+id/cprefe_rb_numbers"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_row="0"
                android:layout_column="0"
                android:enabled="true"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cprefe_rb_colours"
                android:id="@+id/cprefe_rb_colours"
                android:layout_below="@+id/cprefe_rb_numbers"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_row="1"
                android:layout_column="0"
                android:checked="false" />

        </RadioGroup>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cprefe_tv_songs_tittle_text"
            android:id="@+id/cprefe_tv_songs_tittle"
            android:textSize="20dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cprefe_tv_songs_tittle"
            android:id="@+id/radioGroup2">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cprefe_tv_song1"
                android:id="@+id/cprefe_rb_song1"
                android:enabled="true"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cprefe_tv_song2"
                android:id="@+id/cprefe_rb_song2" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cprefe_tv_song3"
                android:id="@+id/cprefe_rb_song3" />
        </RadioGroup>

        <Button

            android:id="@+id/cprefe_b_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:textColor="#E8EAF6"
            android:text="@string/cprefe_b_play_text"
            android:layout_below="@+id/radioGroup2"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>
